<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_option"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sniketn_pc.diabeticmanagement.MenuOption">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="163dp">


            <RadioGroup
                android:text="@string/group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/RadioGroup1">

                <RadioButton
                    android:text="@string/RadioButton_diabetic_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadioButton_diabetic_details"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/RadioButton_daily_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadioButton_daily_input"
                    android:layout_weight="1" />
                <RadioButton
                    android:text="@string/RadioButton_view_input_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadioButton_monthly_input_result"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/RadioButton_monthly_input_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadioButton_monthly_input_graph"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/Location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadioButton_GoogleMap"
                    android:layout_weight="1" />

                <RadioButton
                    android:text="@string/News"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/RadioButton_diabetes_news"
                    android:layout_weight="1" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:text="@string/Button_select_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Button_select_option" />
    </LinearLayout>

</RelativeLayout>
