<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sniketn_pc.diabeticmanagement.MainActivity">


    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:hint="Email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/Password"
                android:hint="Password" />

            <Button
                android:text="@string/Register"
                android:id="@+id/Register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold" />

            <Button
                android:text="@string/Get_User"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/getUser" />

            <TextView
                android:text="@string/NoConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textNoConnection" />

            <CheckBox
                android:text="@string/remenber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/checkBoxRemenber" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
